# uncertainty-jnr

./: .gitignore  README.md  config.py  predict_images.py  pyproject.toml  train.py
configs/: base8_reid.yaml  small16_reid.yaml
docs/: DATA.md  INFERENCE.md
src/uncertainty_jnr/: __init__.py  augmentation.py  data.py  datasets.py  loss.py  model.py  utils.py
